--- a/style-preview-card.css
+++ b/style-preview-card.css
@@ -52,12 +52,13 @@ img{
 }
 .eth{
     position: relative;
-    width: 100%;
+    width: 275px;
     font-size: 15px;
     line-height: 19px;
     display: flex;
     justify-content: space-between;
     margin-left: 24px;
+    margin-top: 10px;
 }
 .eth p{
     margin: 0;
@@ -73,7 +74,7 @@ img{
 }
 .eth-img{
     position: absolute;
-    top: 4px;
+    top: 1px;
     left: 0;
     width: 16px;
     height: 16px;
@@ -96,18 +97,34 @@ img{
     border-radius: 20px;
 }
 .line{
+    position: absolute;
+    width: 275px;
     display: flex;
-    margin-top: 16px;
+    margin-top: 38px;
     width: 100%;
     height: 1px;
     background-color: var(--SoftBlue);
+    opacity: 0.5;
 }
 .footer{
-    margin-top: 16px;
+    position: absolute;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
-    position: relative;
+    align-items: center;
 }
 .footer p{
+    position: relative;
+    margin-top: 16px;
     margin-left: 50px;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 0;
+    font-weight: 300;
+    color: var(--SoftBlue);
+}
+
+.name{
+    color: var(--White);
+    font-weight: 700;
 }
